--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,15 @@
 }
 
 .nav-menu {
-	display: inline-block;
 	text-align: right;
+	display: block;
 }
+
+.li {
+	display: list-item;
+}
+
+#nav-buttons {
+	display: inline;
+}
+
