--- a/css/main.css
+++ b/css/main.css
@@ -11,10 +11,12 @@
 
 li {
 	display: inline;
+	display: list-item;
 }
 
 ul.nav-buttons {
 	text-decoration: none;
 	color: white;
 	text-transform: uppercase;
+	border-right: 1px solid white;
 }
