--- a/css/main.css
+++ b/css/main.css
@@ -9,9 +9,20 @@
 	float: right;
 }
 
-li {
+li.home-button {
 	display: inline;
 	border-right: 1px solid white;
+	padding: 0 20px;
+}
+
+li.about-button {
+	display: inline;
+	border-right: 1px solid white;
+	padding: 0 20px;
+}
+
+li.singIn-button {
+	display: inline;
 	padding: 0 20px;
 }
 
