--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@ li.signIn-button {
 	color: #6e2556 !important;
 }
 
-button.small {
+button {
 	float: center;
 	text-transform: uppercase;
 	color: white;
