--- a/css/main.css
+++ b/css/main.css
@@ -45,3 +45,6 @@ li.signIn-button {
 	color: white;
 	background-color: #6e2556 !important;
 }
+.boxed {
+	 background-image: url("C:\Users\\Ave\\Documents\\GitHub\\EventApp\\img\\people.jpg");
+}
