--- a/css/main.css
+++ b/css/main.css
@@ -46,5 +46,5 @@ li.signIn-button {
 	background-color: #6e2556 !important;
 }
 .boxed {
-	 background-image: url("C:\Users\\Ave\\Documents\\GitHub\\EventApp\\img\\people.jpg");
+	 background-image: url("https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/people.jpg");
 }
