--- a/css/main.css
+++ b/css/main.css
@@ -55,3 +55,9 @@ li.signIn-button {
 	 left: 200px;
 	 width: 50px:
 }
+
+.medium-3.columns.bio {
+	text-align: center;
+	text-transform: uppercase;
+	color: #6e2556;
+}
