--- a/css/main.css
+++ b/css/main.css
@@ -50,18 +50,10 @@ li.signIn-button {
 	 background-image: url("https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/people.jpg");
 }
 
-.maptest {
-	 position: relative;
-	 left: 200px;
-	 width: 50px:
+.ringsIcon {
+	
+	background-image: url(https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/MapMarkers/Rings.png
 }
-
-.medium-3.columns.bio {
-	text-align: center;
-	text-transform: uppercase;
-	color: #6e2556;
-}
-
 .small-4.columns.time {
 	text-align: center;
 	margin: 25px 20px;
