create button on home

--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,12 @@ li.about-button {
 	padding: 0 20px;
 }
 
+li.create-button {
+	display: inline;
+	border-right: 1px solid white;
+	padding: 0 20px;
+}
+
 li.signIn-button {
 	display: inline;
 	padding: 0 20px;
@@ -52,8 +58,9 @@ li.signIn-button {
 
 .ringsIcon {
 	
-	background-image: url(https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/MapMarkers/Rings.png
+	background-image: url(https://raw.githubusercontent.com/EdgardoA/EventApp/gh-pages/img/MapMarkers/Rings.png);
 }
+
 .small-4.columns.time {
 	text-align: center;
 	margin: 25px 20px;
